--- a/secrets/variables.env
+++ b/secrets/variables.env
@@ -1,2 +1,7 @@
-DB_URL="mongodb://localhost:27017/crud"
-NODE_ENV="DEV"
+#Properties for local
+#DB_URL="mongodb://localhost:27017/crud"
+#NODE_ENV="DEV"
+
+#Properties for cloud
+DB_URL="mongodb://172.18.129.29:27017/crud"
+NODE_ENV="CLOUD"
