changes related to mongodb and project deployment

--- a/secrets/variables.env
+++ b/secrets/variables.env
@@ -3,5 +3,5 @@
 #NODE_ENV="DEV"
 
 #Properties for cloud
-DB_URL="mongodb://172.18.129.29:27017/crud"
-NODE_ENV="CLOUD"
+DB_URL="mongodb://mongodb-user:#test123@mongodb-pod-resources-svc.tcm.svc.cluster.local:27017/samplecurd?authSource=admin"
+NODE_ENV="DEV"
